@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-01T16:37:09Z",
+  "timestamp" : "2022-07-02T08:26:19Z",
   "count_outdated" : 644,
   "uniques_outdated" : 334,
   "count" : 674,
-  "uniques" : 350,
+  "uniques" : 351,
   "clones" : [
     {
       "timestamp": "2022-06-18T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -88,6 +88,13 @@
       "count_minmax": [ 3, 5 ],
       "uniques": 3,
       "uniques_minmax": [ 2, 3 ]
+    },
+    {
+      "timestamp": "2022-07-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
